--- a/src/components/MoviesShow/MovieShow.css
+++ b/src/components/MoviesShow/MovieShow.css
@@ -4,11 +4,21 @@
 }
 
 .overview{
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .date{
-    font-size: 25px;
+    font-size: 20px;
 }
+
+.poster{
+    max-width: 400px;
+    max-height: 600px;
+    margin-left: 100px;
+}
+
+
+
+
 
 
