--- a/src/components/MainContainer/MainContainer.css
+++ b/src/components/MainContainer/MainContainer.css
@@ -1,12 +1,13 @@
 .column{
     float: left;
-    width: 33.33%;
+    width: 22%;
     padding: 5px;
     display: table;
+    margin-left: 40px;
 }
 
 .main{
-    max-width: 350px;;
+    max-width: 300px;
 }
 
 
