--- a/src/components/MainContainer/MainContainer.css
+++ b/src/components/MainContainer/MainContainer.css
@@ -2,12 +2,13 @@
     float: left;
     width: 22%;
     padding: 5px;
-    display: table;
+    display: inline-block;
     margin-left: 40px;
 }
 
 .main{
-    max-width: 300px;
+    max-width: 500px;
+    height: 470px;
 }
 
 
