--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,9 @@
 .active{
     font-size: 20px;
-    color: black;
+    color: white;
     padding: 50px;
 }
 
 .search{
-    padding: 40px;
+    margin-top: 45px;
 }
